fixed menu alignment

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -71,7 +71,7 @@ html,
 }
 
 .gh-head-actions a:first-child svg {
-    margin-left: 20px;
+    /* margin-left: 20px; */
 }
 
 .gh-head-actions a:last-child svg {
